--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,16 +34,16 @@
 					</li>
 					  
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Features</a>
+						<a class="nav-link" href="#">Αναζήτηση διαδρομής</a>
 					</li>
 					  
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Features</a>
+						<a class="nav-link" href="#">Εισητήρια/Κάρτες</a>
 					</li>
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  ΑμεΑ 
+						  Δρομολόγια/Στάσεις 
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -56,7 +56,7 @@
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Dropdown link
+						  ΑμεΑ
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -65,6 +65,25 @@
 						  <a class="dropdown-item" href="#">Something else here</a>
 						</div>
 					</li>
+					
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  Ανακοινώσεις
+						</a>
+						
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						  <a class="dropdown-item" href="#">Action</a>
+						  <a class="dropdown-item" href="#">Another action</a>
+						  <a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+					
+					
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Επικοινωνία</a>
+					</li>
+					
+					
 				</ul>
 		    </div>
 			
@@ -109,13 +128,25 @@
 
 
 	<% if(error && error.length) { %>
+		<div class="container">
 			<div class="alert alert-danger" role="alert">
 				<div class="container">
 					<%= error %>
 				</div>
 			</div>
+		</div>
 	<% } %>
 
+
+	<% if(success && success.length) { %>
+		<div class="container">
+			<div class="alert alert-success" role="alert">
+				<div class="container">
+					<%= success %>
+				</div>
+			</div>
+		</div>
+	<% } %>
 
 
 
