--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,9 +37,6 @@
 						<a class="nav-link" href="#">Αναζήτηση διαδρομής</a>
 					</li>
 					  
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Εισητήρια/Κάρτες</a>
-					</li>
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,9 +44,25 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Action</a>
-						  <a class="dropdown-item" href="#">Another action</a>
-						  <a class="dropdown-item" href="#">Something else here</a>
+						  <a class="dropdown-item" href="#">Επιλογή Δρομολογίου</a>
+						  <a class="dropdown-item" href="#">24ωρα Λεωφορεία</a>
+						  <a class="dropdown-item" href="#">Νυχτερινά δρομολόγια</a>
+						  <a class="dropdown-item" href="#">Λεωφορεία αεροδρομίου</a>
+						</div>
+					</li>
+					
+					
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  Εισητήρια/Κάρτες 
+						</a>
+						
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						  <a class="dropdown-item" href="#">Επαναφόρτιση κάρτας</a>
+						  <a class="dropdown-item" href="#">Αγορά εισητηρίων</a>
+						  <a class="dropdown-item" href="#">Τιμές εισητηρίων</a>
+						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
+						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
 						</div>
 					</li>
 					  
@@ -60,24 +73,15 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Action</a>
-						  <a class="dropdown-item" href="#">Another action</a>
-						  <a class="dropdown-item" href="#">Something else here</a>
+						  <a class="dropdown-item" href="#">Στάσεις</a>
+						  <a class="dropdown-item" href="#">Εισητήρια/Κάρτες</a>
 						</div>
 					</li>
 					
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Ανακοινώσεις
-						</a>
-						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Action</a>
-						  <a class="dropdown-item" href="#">Another action</a>
-						  <a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
 					
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Ανακοινώσεις</a>
+					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Επικοινωνία</a>
