--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,9 +45,9 @@
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="#">Επιλογή Δρομολογίου</a>
-						  <a class="dropdown-item" href="#">24ωρα Λεωφορεία</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Λεωφορεία</a>
 						  <a class="dropdown-item" href="#">Νυχτερινά δρομολόγια</a>
-						  <a class="dropdown-item" href="#">Λεωφορεία αεροδρομίου</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">Λεωφορεία αεροδρομίου</a>
 						</div>
 					</li>
 					
