polles allages deite to site

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,19 +28,16 @@
 		  
 		    <div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-				
-					<li class="nav-item active">
-						<a class="nav-link" href="/">Αρχική </a>
-					</li>
+			
 					  
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Αναζήτηση διαδρομής</a>
+						<a class="nav-link" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις </a>
 					</li>
 					  
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Δρομολόγια/Στάσεις 
+						  Δρομολόγια
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
