--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,21 +14,23 @@
 		  
 			<h4 style="text-align: center; class="card-title"><b>Διαδρομή</b></h4>
 			
-			<form>
-			
-			  <div class="form-group">
-				<label for="">Απο:</label>
-				<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Ζωγράφου">
-			  </div>
-			  
-			  
-			  <div class="form-group">
-				<label for="">Προς:</label>
-				<input type="text" class="form-control" id="exampleInputPassword1" placeholder="Σύνταγμα">
-			  </div>
-			  
-			  <button type="submit" class="btn btn-success">Αναζήτηση</button>
-			</form>
+				<form action="/anazitisi_diadromis" method="POST">
+				
+				  <div class="form-group">
+					<label for="">Απο:</label>
+					<input type="text" class="form-control" name = "dromologio[afetiria]" id="exampleInputEmail1" placeholder="Ζωγράφου">
+					<p><small>Το πρώτο γράμμα ΚΕΦΑΛΑΙΟ και χωρίς τόνους.</small></p>
+				  </div>
+				  
+				  
+				  <div class="form-group">
+					<label for="">Προς:</label>
+					<input type="text" class="form-control" name = "dromologio[terma]" id="exampleInputPassword1" placeholder="Σύνταγμα">
+					<p><small>Το πρώτο γράμμα ΚΕΦΑΛΑΙΟ και χωρίς τόνους.</small></p>
+				  </div>
+				  
+				  <button type="submit" class="btn btn-success" style="float: right;">Αναζήτηση</button>
+				</form>
 		  </div>
 		</div>
 		
