--- a/views/apotelesmata_anaz_diadromis.ejs
+++ b/views/apotelesmata_anaz_diadromis.ejs
@@ -2,20 +2,51 @@
 
 
 
+	<div class="container">
+
+		<h4>Δρομολόγια απο <b><%= arxi %></b> προς <b><%= telos %>.</h4>
+		<br>
+		
+		<table class="table">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">ΛΕΟΦΩΡΕΙΟ</th>
+					<th scope="col">ΑΦΕΤΗΡΙΑ</th>
+					
+					<th scope="col">ΣΤΑΣΗ 1</th>
+					<th scope="col"> ... </th>
+					<th scope="col">ΣΤΑΣΗ 10</th>
+					
+					<th scope="col">ΤΕΡΜΑ</th>
+					<th scope="col">ΕΠΟΜΕΝΟ ΣΕ</th>
+					<th scope="col">ΕΜΦΑΝΙΣΗ ΑΦΕΤΗΡΙΑΣ ΣΤΟ ΧΑΡΤΗ</th>
+				</tr>
+			</thead>
+			
+			
+			<tbody style="background-color: #F5F5DC;">
+				<% dromologia.forEach(function(drom){ %>
+					<tr>
+						<td><%= drom.leoforeio %></td>
+						<td><%= drom.afetiria %></td>
+						
+						<td><%= drom.stasi1 %></td>
+						<td> ... </td>
+						<td><%= drom.stasi10 %></td>
+						
+						<td><%= drom.terma %></td>
+						<td><%= drom.epomeno %></td>
+						<td><a href="/plirofories_stasis/<%= drom._id %>">Χάρτης</a></td>
+					</tr>
+				 <% })  %>
+			</tbody>
+		</table>
+
+	</div>
 
 
 
-
-<h1> Hello diadromi</h1>
-
-
-
-
-
-
-
-
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
