--- a/views/apotelesmata_anaz_diadromis.ejs
+++ b/views/apotelesmata_anaz_diadromis.ejs
@@ -41,6 +41,8 @@
 				 <% })  %>
 			</tbody>
 		</table>
+		
+		<a href="javascript:history.back()">Επιστροφή στην αναζήτηση δρομολογίου</a>
 
 	</div>
 
