--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,7 +55,7 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Επαναφόρτιση κάρτας</a>
+						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
 						  <a class="dropdown-item" href="#">Αγορά εισητηρίων</a>
 						  <a class="dropdown-item" href="#">Τιμές εισητηρίων</a>
 						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
