--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,46 @@
 	<body>
 	
 	
+	
+	
+		<div class="bg-top navbar-light">
+			<div class="container">
+				<div class="row no-gutters d-flex align-items-center align-items-stretch">
+					<div class="col-md-4 d-flex align-items-center py-4">
+						<a class="navbar-brand" href="/">Oasa</a>
+					</div>
+					<div class="col-lg-8 d-block">
+						<div class="row d-flex">
+							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
+								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
+								<div class="text">
+									<span>Email</span>
+									<span>youremail@email.com</span>
+								</div>
+							</div>
+							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
+								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
+								<div class="text">
+									<span>Call</span>
+									<span>Call Us: + 1235 2355 98</span>
+								</div>
+							</div>
+							<div class="col-md topper d-flex align-items-center justify-content-end">
+								<p class="mb-0 d-block">
+									<a href="#" class="btn py-2 px-3 btn-primary">
+										<span>Free Consulting</span>
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			  </div>
+		</div>
+		
+		
+		
+	
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d9d9d9;">
 		  <a class="navbar-brand" href="/"><b>OASA</b></a>
 		  
@@ -56,7 +96,7 @@
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
-						  <a class="dropdown-item" href="#">Αγορά εισητηρίων</a>
+						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισητηρίων</a>
 						  <a class="dropdown-item" href="#">Τιμές εισητηρίων</a>
 						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
 						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
@@ -125,7 +165,8 @@
       	    <% } %>
 
 		</nav>
-
+		
+		
 
 
 	<% if(error && error.length) { %>
