--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -117,7 +117,7 @@
 					
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Ανακοινώσεις</a>
+						<a class="nav-link" href="/anakoinoseis">Ανακοινώσεις</a>
 					</li>
 					
 					<li class="nav-item active">
