--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -3,6 +3,9 @@
 
 <div class="container">
 
+	<h3 align="center" ><b> Αγορά εισητηρίων </b></h3>
+	<br><br>
+
 	<% if(typeof currentUser !== "undefined") {   %>
 	
 		<form action="/agora_eisitirion" method="POST">
