--- a/views/epanafortisi_kartas.ejs
+++ b/views/epanafortisi_kartas.ejs
@@ -3,6 +3,10 @@
 
 <div class="container">
 
+	<h3 align="center" ><b> Επαναφόρτιση κάρτας </b></h3>
+	<br><br>
+	
+
 	<% if(typeof currentUser !== "undefined") {   %>
 	
 		<form action="/epanafortisi_kartas" method="POST">
