--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 
 
 <div class="container">
-	<h2 style="text-align: center; margin-top: 2%; color: black;"><strong> Login </strong></h2>
+	<h2 style="text-align: center; margin-top: 2%; color: black;"><strong> Σύνδεση </strong></h2>
 
 	<div style="width: 25%; margin: auto; margin-top: 5%;">
 		<form action = "/login" method = "POST">
@@ -21,15 +21,15 @@
 
 
 			<div class="form-group">
-				<button class="btn btn-sm btn-success btn-default btn-block" >Login</button>
+				<button class="btn btn-sm btn-success btn-default btn-block" >Σύνδεση</button>
 			</div>
 
 
 		</form>
 		
-		<a href="/register">Register</a>
+		<a href="/register">Εγγραφή</a>
 		<br>
-		<a href="javascript:history.back()">Back</a>
+		<a href="javascript:history.back()">Πίσω</a>
 
 	</div>
 </div>
