--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="container">
-		<h2 style="text-align: center; margin-top: 2%; color: black;"><strong> Sign Up </strong></h2>
+		<h2 style="text-align: center; margin-top: 2%; color: black;"><strong> Εγγραφή </strong></h2>
 		
 		<div style="width: 25%; margin: 20px auto; margin-top: 4%;">
 			<form action = "/register" method = "POST">
@@ -57,12 +57,12 @@
 
 
 			<div class="form-group">
-				<button class="btn btn-sm btn-success btn-default btn-block" >Sign Up</button>
+				<button class="btn btn-sm btn-success btn-default btn-block" >Εγγραφή</button>
 			</div>
 
 			</form>
 			
-			<a href="javascript:history.back()">Back</a>
+			<a href="javascript:history.back()">Πίσω</a>
 			
 		</div>
 </div>
