--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -150,16 +150,16 @@
 
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Logout</a>
+						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Αποσύνδεση</a>
 					</li>
 				</ul>
 		    <% }else{ %>
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Login</a>
+						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Σύνδεση</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Sign Up</a>
+						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Εγγραφή</a>
 					</li>
 				</ul>
       	    <% } %>
