--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -121,7 +121,7 @@
 					</li>
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Επικοινωνία</a>
+						<a class="nav-link" href="/epikoinonia">Επικοινωνία</a>
 					</li>
 					
 					
