--- a/views/anakoinoseis.ejs
+++ b/views/anakoinoseis.ejs
@@ -5,7 +5,7 @@
 <div class="container">
 
 	<% anakoinoseis.forEach(function( an ){ %>
-		<font color="blue"> <%= an.date %> </font> <%= an.anakoinosi %>	
+		<p><font color="blue"> <%= an.date %> </font> <%= an.anakoinosi %>	</p>
 		<br>		
 	<% }) %>
 	<br>
