--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -86,13 +86,13 @@
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Εισητήρια/Κάρτες 
+						  Εισιτήρια/Κάρτες 
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
-						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισητηρίων</a>
-						  <a class="dropdown-item" href="#">Τιμές εισητηρίων</a>
+						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισιτηρίων</a>
+						  <a class="dropdown-item" href="#">Τιμές εισιτηρίων</a>
 						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
 						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
 						</div>
@@ -105,8 +105,8 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Στάσεις</a>
-						  <a class="dropdown-item" href="#">Εισητήρια/Κάρτες</a>
+						  <a class="dropdown-item" href="#">Στάσεις με προεξοχές</a>
+						  <a class="dropdown-item" href="#">Εισιτήρια/Κάρτες</a>
 						</div>
 					</li>
 					
