--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-	<h3 align="center" ><b> Αγορά εισητηρίων </b></h3>
+	<h3 align="center" ><b> Αγορά εισιτηρίων </b></h3>
 	<br><br>
 
 	<% if(typeof currentUser !== "undefined") {   %>
