--- a/views/anakoinoseis.ejs
+++ b/views/anakoinoseis.ejs
@@ -4,6 +4,10 @@
 
 <div class="container">
 
+	<h3 align="center"><b> ΑΝΑΚΟΙΝΩΣΕΙΣ </b></h3>
+	<br> <br>
+
+
 	<% anakoinoseis.forEach(function( an ){ %>
 		<h5><font color="blue"> <%= an.date %> </font> <%= an.anakoinosi %>	</h5>
 		<br>		
