--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -78,7 +78,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Λεωφορεία</a>
-						  <a class="dropdown-item" href="#">Νυχτερινά δρομολόγια</a>
+						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">Λεωφορεία αεροδρομίου</a>
 						</div>
 					</li>
@@ -105,7 +105,7 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Στάσεις με προεξοχές</a>
+						  <a class="dropdown-item" href="/staseis_amea">Στάσεις με προεξοχές</a>
 						  <a class="dropdown-item" href="#">Εισιτήρια/Κάρτες</a>
 						</div>
 					</li>
