--- a/views/account.ejs
+++ b/views/account.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="container">
-		<h2 style="text-align: center; color: black; margin-top: 2%;"><strong> Change Your Profile Settings </strong></h2>
+		<h3 style="text-align: center; color: black; margin-top: 2%;"><strong> Επεξεργασία Στοιχείων Λογαριασμού </strong></h3>
 		
 		<div style="width: 30%; margin: 20px auto;">
 			<form action = "/account" method = "POST">
@@ -48,12 +48,12 @@
 
 
 			<div class="form-group">
-				<button class="btn btn-sm btn-success btn-default btn-block" >Submit</button>
+				<button class="btn btn-sm btn-success btn-default btn-block" >Αλλαγή στοιχείων</button>
 			</div>
 
 			</form>
 			
-			<a href="javascript:history.back()">Back</a>
+			<a href="javascript:history.back()">Ακύρωση</a>
 		</div>
 </div>
 
