--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -144,7 +144,7 @@
 						  <a class="dropdown-item" href="/my_account">Ο Λογαριασμός μου</a>
 						  <a class="dropdown-item" href="/account">ΡυθμίσειςΛογαριασμού</a>
 						  
-						  <a class="dropdown-item" href="#">Οι αγορές μου</a>
+						  <a class="dropdown-item" href="/oi_agores_mou">Οι αγορές μου</a>
 						  <a class="dropdown-item" href="#">Τα δρομολόγια μου</a>
 						</div>
 					</li>	
