--- a/views/pliromi.ejs
+++ b/views/pliromi.ejs
@@ -6,39 +6,24 @@
 <div class="container">
 	<h3 align="center"><b> ΣΕΛΙΔΑ ΠΛΗΡΩΜΗΣ </b></h3>
 	<br>
-	<% if(typeof currentUser !== "undefined") {   %>
 
-
-
-
-
-
-
-
-
-
-
-	<% }else{ %>
 		<% if( p === "1"){ %>
-		
-		
-		
 		
 			<% if(  stoixeia.pliromi === "paypal"){ %>
 				<div class="row">
 					<div class="col">
 				
-						<h3><b> Πληρωμή με  <%= stoixeia.pliromi %></b></h3>
+						<h4><b> Πληρωμή με Paypal</b></h4>
 						
 						<div style="width: 40%; margin-top: 5%;">
-							<h4><b>Όνομα χρήστη </b><h4>
+							<h5><b>Όνομα χρήστη </b><h5>
 						
 							<div class="form-group">
 								<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Nikos123">
 							</div>
 						
 							<br>
-							<h4><b>Κωδικός </b><h4>
+							<h5><b>Κωδικός </b><h5>
 							
 							<div class="form-group">
 								<input type="password" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="*******">
@@ -52,7 +37,7 @@
 					</div>
 					
 					<div class="col">
-						<h3><b> Απόδειξη χρήστη</b></h3>
+						<h4><b> Απόδειξη χρήστη</b></h4>
 						<br>
 						
 						<h5><b>Όνομα: </b> <%= stoixeia.onoma %> <h5>
@@ -71,10 +56,13 @@
 						<div style="width: 40%; margin-top: 5%;">
 							<div class="form-group">
 
-								
-								<a class="btn btn-sm btn-success btn-default btn-block" href="/epiveveosi_pliromis/<%= stoixeia.onoma+"+"+stoixeia.eponimo
-								+"+"+stoixeia.email+"+"+stoixeia.kwdikos+"+"+stoixeia.komistro+"+"+stoixeia.posotita+"+"+cost %>">Πληρωμή</a>
-								
+								<% if(typeof currentUser !== "undefined"){ %>
+									<a class="btn btn-sm btn-success btn-default btn-block" href="/epiveveosi_pliromis/<%= stoixeia.onoma+"+"+stoixeia.eponimo
+									+"+"+stoixeia.email+"+"+stoixeia.kwdikos+"+"+stoixeia.komistro+"+"+stoixeia.posotita+"+"+cost+"+"+currentUser._id %>">Πληρωμή</a>
+								<% }else{ %>
+									<a class="btn btn-sm btn-success btn-default btn-block" href="/epiveveosi_pliromis/<%= stoixeia.onoma+"+"+stoixeia.eponimo
+									+"+"+stoixeia.email+"+"+stoixeia.kwdikos+"+"+stoixeia.komistro+"+"+stoixeia.posotita+"+"+cost+"+"+111 %>">Πληρωμή</a>
+								<% } %>	
 								
 							</div>
 						</div>
@@ -82,28 +70,80 @@
 				</div>
 				
 				
-				
-				
-				
-				
-				
 			<% } else{ %>
-				<h4><b> Πληρωμή με  <%= stoixeia.pliromi %></b></h4>
-			
-			
-				<p> sasssssssssdasd </p>
-				
+				<div class="row">
+					<div class="col">
+						<h4><b> Πληρωμή με  Πιστωτική/Χρεωστική κάρτα</b></h4>
+						
+						
+						<div style="width: 40%; margin-top: 5%;">
+							<h5><b>Κωδικός κάρτας </b><h5>
+						
+							<div class="form-group">
+								<input type="number" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="121213131">
+								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
+							</div>
+						
+							<br>
+							<h5><b>Όνομα δικαιούχου</b><h5>
+							
+							<div class="form-group">
+								<input type="text" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="Nikolaos Makrygeorgos">
+								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
+							</div>
+
+						</div>
+
+						
+						<br><br><br><br><br><br>
+						<a href="javascript:history.back()">Ακύρωση</a>
+						
+					</div>
+					
+					<div class="col">
+						<h4><b> Απόδειξη χρήστη</b></h4>
+						<br>
+						
+						<h5><b>Όνομα: </b> <%= stoixeia.onoma %> <h5>
+						<h5><b>Επώνυμο: </b> <%= stoixeia.eponimo %> <h5>
+						<h5><b>Email: </b> <%= stoixeia.email %> <h5>
+						<h5><b>Κωδικός κάρτας: </b> <%= stoixeia.kwdikos %> <h5>
+					
+						<br>
+						<h5><b>Κόμιστρο: </b> <%= stoixeia.komistro %> <h5>
+						<h5><b>Ποσότητα: </b> <%= stoixeia.posotita %> <h5>
+						<br>
+						<h5><b>Συνολικό κόστος: </b> <%= cost %> ευρω<h5>
+					
+					
+						<br>
+						<div style="width: 40%; margin-top: 5%;">
+							<div class="form-group">
+
+								<% if(typeof currentUser !== "undefined"){ %>
+									<a class="btn btn-sm btn-success btn-default btn-block" href="/epiveveosi_pliromis/<%= stoixeia.onoma+"+"+stoixeia.eponimo
+									+"+"+stoixeia.email+"+"+stoixeia.kwdikos+"+"+stoixeia.komistro+"+"+stoixeia.posotita+"+"+cost+"+"+currentUser._id %>">Πληρωμή</a>
+								<% }else{ %>
+									<a class="btn btn-sm btn-success btn-default btn-block" href="/epiveveosi_pliromis/<%= stoixeia.onoma+"+"+stoixeia.eponimo
+									+"+"+stoixeia.email+"+"+stoixeia.kwdikos+"+"+stoixeia.komistro+"+"+stoixeia.posotita+"+"+cost+"+"+111 %>">Πληρωμή</a>
+								<% } %>
+								
+							</div>
+						</div>
+					</div>
+				</div>
 			<% } %>
-		<% }else{%>							
+			
+		<% }else{%>		
+
+
+
+
+
+
+		
 	
 		<% } %>
-
-
-
-
-
-
-	<% } %>
 </div>
 
 
